css/index.css
.content{
    vertical-align: center;
    background-color: black;
}

.innerbody{
    margin: 0 auto;
}

.name{
    color: white;
    font-family: 'Quicksand', sans-serif;
    font-size: 55px;
    text-align: center;
}

.subhead{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 800px;
    color: white;
    font-family: 'Quicksand', sans-serif;
    font-size: 20px;
    text-align: center;
}

.dp{
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    height: 290px;
    width: 200px;
}

.icons{
    display: flex;
    justify-content: center;
}

#lin{
    padding-left: 15px;
    padding-right: 15px;
}

